syntax = "proto3";
package thesixnetwork.sixprotocol.protocoladmin;

import "gogoproto/gogo.proto";
import "protocoladmin/params.proto";
import "protocoladmin/group.proto";
import "protocoladmin/admin.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/thesixnetwork/six-protocol/x/protocoladmin/types";

// GenesisState defines the protocoladmin module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  string port_id = 2;
  repeated Group groupList = 3 [ (gogoproto.nullable) = false ];
  repeated Admin adminList = 4 [ (gogoproto.nullable) = false ];
  // this line is used by starport scaffolding # genesis/proto/state
}
